--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -5,9 +5,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project Detail</title>
-  <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+  <link rel="stylesheet" type="text/css" href="../static/css/style.css" th:href="@{/css/style.css}">
 </head>
 <body>
-  <h1>Project Detail</h1>
+  <header class="global-header">
+    <h1 class="head-title">Project Management System</h1>
+    <div class="sub-menu">
+      <p class="user-name">Robert McCall</p>
+      <button class="logout">Logout</button>
+    </div>
+  </header>
+  <main>
+    <div>
+      <p>title</p>
+      <div>
+        <span>Phase</span>
+      </div>
+      <div>
+        Representative
+      </div>
+      <div>
+        absolute...
+      </div>
+      <div>
+        <ul>
+          <li>Comment.</li>
+          <li>Comment.</li>
+        </ul>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
