--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -5,9 +5,57 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Project List</title>
-  <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+  <link rel="stylesheet" type="text/css" href="../static/css/style.css" th:href="@{/css/style.css}">
 </head>
 <body>
-  <h1>Project List</h1>
+  <header class="global-header">
+    <h1 class="head-title">Project Management System</h1>
+    <div class="sub-menu">
+      <p class="user-name">Robert McCall</p>
+      <button class="logout">Logout</button>
+    </div>
+  </header>
+  <main>
+    <div class="list-wrap">
+      <table class="project-table">
+        <caption>Projects</caption>
+        <thead>
+          <tr>
+            <th>Project</th>
+            <th class="fit">Phase</th>
+            <th class="fit">Representative</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <p class="title">Title</p>    
+              <p class="absolute">
+                Absolute string...Absolute string... 
+                Absolute string...Absolute string... 
+                Absolute string...Absolute string... 
+                Absolute string...Absolute string... 
+                Absolute string...Absolute string... 
+              </p>
+            </td>
+            <td class="center">
+              <span class="phase -col-1">Working</span>
+            </td>
+            <td>Robert McCall</td>
+          </tr>
+          <tr>
+            <td>
+              <p class="title">Title2</p>    
+              <p>Absolute string...</p>
+            </td>
+            <td class="center">
+              <span class="phase -col-2">Estimating</span>
+            </td>
+            <td>John Smith</td>
+          </tr>
+        </tbody>    
+      </table>
+    </div>
+  </main>
 </body>
 </html>
