Update UI Design

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -16,23 +16,44 @@
     </div>
   </header>
   <main>
-    <div>
-      <p>title</p>
-      <div>
-        <span>Phase</span>
+    <div class="detail-wrap">
+      <p class="detail-title">Project Title</p>
+      <div class="detail-sub">
+        <div>
+            Robert McCall | 2025/02/15
+        </div>
+        <div>
+          <span class="phase -col-1">Working</span>
+        </div>
       </div>
-      <div>
-        Representative
+      
+      <div class="detail-content">
+        content text.content text.content text.content text.content text.
+        content text.content text.content text.content text.content text.
+        content text.content text.content text.content text.content text.<br><br>
+        content text.content text.content text.content text.content text.
+        content text.content text.content text.content text.content text.
+        content text.content text.content text.content text.content text.
+        content text.content text.content text.content text.content text.
+        content text.content text.content text.content text.content text.
       </div>
-      <div>
-        absolute...
-      </div>
-      <div>
-        <ul>
-          <li>Comment.</li>
-          <li>Comment.</li>
+      <div class="comment-wrap">
+        <p class="comment-title">Comments</p>
+        <ul class="comment-list">
+          <li>
+            <div class="comment">This is awesome project!</div>
+            <p class="comment-written">John Smith | 2025/03/01 12:34</p>
+          </li>
+          <li>
+            <div class="comment">Great!</div>
+            <p class="comment-written">John Smith | 2025/03/01 12:34</p>
+          </li>
         </ul>
       </div>
+    </div>
+    <div class="commit-comment-wrap">
+      <input type="text" name="comment" placeholder="Enter your comment.">
+      <button type="button">SUBMIT</button>
     </div>
   </main>
 </body>
