--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -29,14 +29,17 @@
         <tbody>
           <tr>
             <td>
-              <p class="title">Title</p>    
-              <p class="absolute">
-                Absolute string...Absolute string... 
-                Absolute string...Absolute string... 
-                Absolute string...Absolute string... 
-                Absolute string...Absolute string... 
-                Absolute string...Absolute string... 
-              </p>
+              <p class="title">Title</p>
+              <div class="absolute-wrap">
+                <p class="absolute">
+                  Absolute string... Absolute string... 
+                  Monday Thesday;
+                  Absolute string... Absolute string... 
+                  Absolute string... Absolute string... 
+                  Absolute string... Absolute string... 
+                  Absolute string... Absolute afewfew... 
+                </p>
+              </div>
             </td>
             <td class="center">
               <span class="phase -col-1">Working</span>
