--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,17 +1,20 @@
 * {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 html, body {
   padding: 0;
   margin: 0;
 }
 body {
-  background-color: #eee;
+  background-color: #e0e0e0;
   color: #111;
   font-size: 14px;
-  font-family: Arial, Helvetica, sans-serif;
 }
-
+button:hover,
+input[type="submit"]:hover {
+  opacity: 0.8;
+}
 .login-wrap {
   width: 100vw;
   height: 100vh;
@@ -73,7 +76,8 @@ body {
 /* Global Components */
 header.global-header {
   width: 100%;
-  background-color: #cacaca;
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #ccc;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -96,22 +100,39 @@ header.global-header div.sub-menu .user-name {
 }
 header.global-header div.sub-menu button.logout {
   border: 0;
-  background-color: #808;
+  background-color: #555;
   color: #fff;
   padding: 4px 8px;
   border-radius: 6px;
+  cursor: pointer;
+}
+span.phase {
+  padding: 4px 12px;
+  display: block;
+  width: 100%;
+  border-radius: 50px;
+  font-size: 0.9rem;
+  color: #fff;
+}
+span.phase.-col-1 {
+  background-color: rgb(39, 134, 106);
+}
+span.phase.-col-2 {
+  background-color: rgb(133, 83, 8);
 }
 
 /* Project list */
 .list-wrap {
-  width: 100%;
+  width: 1024px;
   display: flex;
   justify-content: center;
-  margin-top: 56px;
+  padding: 32px 48px;
+  margin: 56px auto;
+  background-color: #fff;
+  border-radius: 8px;
 }
 .project-table {
   width: 100%;
-  max-width: 800px;
   border-collapse: collapse;
   flex: 1;
 }
@@ -126,7 +147,7 @@ header.global-header div.sub-menu button.logout {
   padding: 16px;
   border: 1px solid #c5c5c5;
   text-align: left;
-  white-space: none;
+  white-space: nowrap;
 }
 .project-table th {
   color: #444;
@@ -145,24 +166,150 @@ header.global-header div.sub-menu button.logout {
   font-size: 1.15rem;
   font-weight: bold;
 }
+.project-table td div.absolute-wrap {
+  display: flex;
+}
 .project-table td p.absolute {
   color: #444;
+  width: 1px;
+  flex: 1;
   white-space: nowrap;
   overflow: hidden;
-  word-break: break-all;
   text-overflow: ellipsis;
-  max-width: 500px;
 }
-.project-table td span.phase {
-  padding: 6px 16px;
-  display: block;
+
+/* Detail */
+div.detail-wrap {
+  margin: 56px auto 108px auto;
   width: 100%;
-  border-radius: 50px;
+  max-width: 1024px;
+  background-color: #fafafa;
+  padding: 32px;
+  border-radius: 8px;
+}
+p.detail-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin: 0 0 8px 0;
+}
+div.detail-sub {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+div.detail-content {
+  margin: 32px 0;
+  line-height: 1.4;
+  font-size: 1rem;
+}
+div.comment-wrap {
+  margin-top: 24px;
+}
+p.comment-title {
+  margin: 0;
+  font-size: 1.15rem;
+  font-weight: bold;
+  color: #444;
+}
+ul.comment-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+ul.comment-list li {
+  border-top: 1px solid #ccc;
+  padding-top: 16px;
+  margin-top: 16px;
+}
+ul.comment-list li div.comment {
+  font-size: 1rem;
+}
+ul.comment-list li p.comment-written {
+  font-size: 0.78rem;
+  color: #555;
+  margin: 8px 0 0 0;
+}
+div.commit-comment-wrap {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 96px;
+  background-color: #f5f5f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+}
+div.commit-comment-wrap input[type="text"] {
+  padding: 8px 12px;
+  height: 40px;
+  border: 1px solid #bbb;
+  border-radius: 6px;
+  width: 560px;
   font-size: 0.9rem;
 }
-span.phase.-col-1 {
-  background-color: rgb(136, 214, 191);
+div.commit-comment-wrap button {
+  border: 0;
+  background-color: #808;
+  color: #fff;
+  height: 38px;
+  border-radius: 6px;
+  padding: 0 16px;
+  cursor: pointer;
+  font-weight: bold;
+  font-size: 0.87rem;
 }
-span.phase.-col-2 {
-  background-color: rgb(218, 178, 117);
+
+/* Edit */
+div.edit-wrap {
+  width: 1024px;
+  padding: 32px 48px;
+  margin: 56px auto;
+  background-color: #fff;
+  border-radius: 8px;
+}
+div.edit-wrap h2 {
+  margin: 0 0 32px 0;
+  font-size: 1.5rem;
+}
+div.edit-wrap form div.form-wrap {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+div.edit-wrap form div.form-wrap > div label {
+  display: block;
+  font-size: 0.85rem;
+  font-weight: bold;
+  margin-bottom: 4px;
+  color: #444;
+}
+div.edit-wrap form div.form-wrap > div input[type="text"] {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #bbb;
+  border-radius: 6px;
+  padding: 12px;
+  font-size: 0.9rem;
+}
+div.edit-wrap form div.form-wrap > div textarea {
+  border: 1px solid #bbb;
+  border-radius: 6px;
+  resize: none;
+  width: 100%;
+  height: 180px;
+  padding: 12px;
+  font-size: 0.9rem;
+  line-height: 1.4;
+}
+div.edit-wrap form div.form-wrap > div input[type="submit"] {
+  background-color: #808;
+  border: 0;
+  color: #fff;
+  font-weight: bold;
+  font-size: 0.9rem;
+  padding: 16px 24px;
+  border-radius: 6px;
+  cursor: pointer;
 }
