--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -18,15 +18,15 @@
   <main>
     <div class="edit-wrap">
       <h2>Create Prooject</h2>
-      <form action="./project/create" method="post">
+      <form action="/project/create" method="post" th:object="${formModel}">
         <div class="form-wrap">
           <div>
             <label>Title</label>
             <input type="text" name="title" placeholder="Enter the project title.">
           </div>
           <div>
-            <label>Absolute</label>
-            <textarea name="absolute"></textarea>
+            <label>Content</label>
+            <textarea name="content"></textarea>
           </div>
           <div>
             <input type="submit" value="CREATE">
