--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -17,20 +17,24 @@
   </header>
   <main>
     <div class="list-wrap">
+      <div class="projects-header">
+        <p class="title">Projects</p>
+        <a class="create" href="/project/create">New Project</a>
+      </div>
       <table class="project-table">
-        <caption>Projects</caption>
         <thead>
           <tr>
             <th>Project</th>
             <th class="fit">Phase</th>
             <th class="fit">Representative</th>
+            <th class="fit">Action</th>
           </tr>
         </thead>
         <tbody>
           <tr th:each="project: ${projects}">
             <td>
-              <p class="title">
-                <a th:href="@{'/project/'+${project.id}}" th:text="${project.title}">Title</a>
+              <p class="title" th:text="${project.title}">
+                Title
               </p>
               <div class="content-wrap">
                 <p class="content" th:text="${project.content}">Content</p>
@@ -40,6 +44,13 @@
               <span th:class="'phase -col-' + ${project.phase.id}" th:text="${project.phase.label}">Working</span>
             </td>
             <td th:text="${project.user.name}">User</td>
+            <td>
+              <div class="actions">
+                <a th:href="@{'/project/' + ${project.id}}">Detail</a>
+                <a th:href="@{'/project/edit/' + ${project.id}}">Edit</a>
+                <button>Delete</button>
+              </div>
+            </td>
           </tr>
         </tbody>    
       </table>
