--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -39,8 +39,11 @@
         </div>
       </div>
       <div class="commit-comment-wrap">
-        <input type="text" name="comment" placeholder="Enter your comment.">
-        <button type="button">SUBMIT</button>
+        <form action="/project/comment" method="post" th:object="${formModel}">
+          <input type="hidden" name="projectId" th:value="${project.id}">
+          <input type="text" name="comment" placeholder="Enter your comment.">
+          <input type="submit" value="SUBMIT">
+        </form>
       </div>
     </div>
   </main>
