--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -17,19 +17,31 @@
   </header>
   <main>
     <div class="edit-wrap">
-      <h2>Create Prooject</h2>
-      <form action="/project/create" method="post" th:object="${formModel}">
+      <h2 th:text="${title}"></h2>
+      <form th:action="${action}" method="post" th:object="${formModel}">
         <div class="form-wrap">
           <div>
             <label>Title</label>
-            <input type="text" name="title" placeholder="Enter the project title.">
+            <input type="text" name="title" th:value="${project.title}" placeholder="Enter the project title.">
           </div>
           <div>
             <label>Content</label>
-            <textarea name="content"></textarea>
+            <textarea name="content" th:utext="${project.content}"></textarea>
           </div>
           <div>
-            <input type="submit" value="CREATE">
+            <label>Phase</label>
+            <select class="phase" name="phaseId">
+              <option
+                th:each="phase: ${phases}"
+                th:value="${phase.id}"
+                th:text="${phase.label}"
+                th:selected="${project.phase != null && phase.id == project.phase.id}"
+              ></option>
+            </select>
+          </div>
+          <div>
+            <input type="hidden" name="id" th:value="${project.id}" th:if="${project.id != null}">
+            <input type="submit" value="SUBMIT">
           </div>
         </div>
       </form>
