--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,17 +4,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project Management System</title>
+  <title>Whistler::Project Management System</title>
   <link rel="stylesheet" type="text/css" href="../static/css/style.css" th:href="@{/css/style.css}">
 </head>
 <body>
   <div class="login-wrap">
     <div class="dialog">
-      <h1 class="login-title">Project Management System</h1>
+      <h1 class="login-title">Whistler</h1>
       <form action="./login" method="post" th:object="${formModel}">
         <div>
           <label>Email</label>
-          <input type="text" name="email" placeholder="Enter email." class="email" th:value="*{email}" required>
+          <input type="text" name="email" placeholder="Enter email." class="email" required>
         </div>
         <div>
           <input type="submit" value="Login">
