--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
   <div class="login-wrap">
     <div class="dialog">
       <h1 class="login-title">Whistler</h1>
-      <form action="./login" method="post" th:object="${formModel}">
+      <form action="/login" method="post" th:object="${formModel}">
         <div>
           <label>Email</label>
           <input type="text" name="email" placeholder="Enter email." class="email" required>
