--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -42,7 +42,10 @@
               <div class="actions">
                 <a th:href="@{'/project/' + ${project.id}}">Detail</a>
                 <a th:href="@{'/project/edit/' + ${project.id}}">Edit</a>
-                <button>Delete</button>
+                <form action="/project/delete" method="post">
+                  <input type="hidden" name="projectId" th:value="${project.id}">
+                  <button onclick="return confirm('Are you sure?');">Delete</button>
+                </form>
               </div>
             </td>
           </tr>
