--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,5 +1,5 @@
 <header class="global-header">
-  <h1 class="head-title"><a th:href="@{/projects}">Whistler</a></h1>
+  <h1 class="head-title"><a th:href="@{/projects}">TinyPMS</a></h1>
   <div class="sub-menu">
     <p class="user-name" th:text="${userName}"></p>
     <form action="/logout" method="POST">
