--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Whistler::Project Management System</title>
+  <title>TinyPMS::Project Management System</title>
   <link rel="stylesheet" type="text/css" href="../static/css/style.css" th:href="@{/css/style.css}">
 </head>
 <body>
   <div class="login-wrap">
     <div class="dialog">
-      <h1 class="login-title">Whistler</h1>
+      <h1 class="login-title">TinyPMS</h1>
       <form action="/login" method="post" th:object="${formModel}">
         <div>
           <label>Email</label>
